[features]
default = []
sim = ["dep:turmoil"]

[package]
name = "spectral"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = "1.1.3"
proptest = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"]}
tokio-util = "0.7.18"
toml = "1.1.2"
turmoil = { version = "0.7.2", optional = true }

[dev-dependencies]
proptest = "1.11.0"
